# simple-feishu

./: README.md  pyproject.toml
src/simple_feishu/: __init__.py  utils.py
