[project]
name = "simple-feishu"
version = "0.1.0"
description = "simple feishu robot framework"
authors = [
    { name = "8x34tnxge", email = "8x34tnxge@mozmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []
